--- a/home.html
+++ b/home.html
@@ -9,31 +9,20 @@
 <body>
   <main class="dashboard">
 
-    <section class="card dropdown">
-      <details>
-        <summary>Company Information</summary>
-        <ul class="checklist">
-          <li>
-            <label>
-              <input type="checkbox"> Individual vehicle information 
-            </label>
-          </li>
-          <li>
-            <label>
-              <input type="checkbox"> Driver contact details
-            </label>
-          </li>
-          <li>
-            <label>
-              <input type="checkbox"> History
-            </label>
-          </li>
-        </ul>
-      </details>
-    </section>
+  <section class="card dropdown">
+  <details>
+    <summary>Company Information</summary>
+    <ul class="checklist">
+      <li><a href="vehicle.html"><span>Individual Vehicle Information</span></a></li>
+      <li><a href="drivers.html"><span>Driver Contact Details</span></a></li>
+      <li><a href="history.html"><span>History</span></a></li>
+    </ul>
+  </details>
+  </section>
+
     <section class="grid-two">
       <div class="card highlight">
-        <h3>Overall vehicle capacity utilization (%)</h3>
+        <h3>Overall Vehicle Capacity Utilization (%)</h3>
       </div>
       <div class="card">
         <h3>Live Logistics Tracking</h3>
@@ -60,6 +49,7 @@
         </div>
       </div>
     </section>
+
     <section class="card highlight">
       <h3>Order Management</h3>
       <div class="grid-three">
@@ -89,6 +79,7 @@
         </div>
       </div>
     </section>
+
     <section class="card">
       <h3>Customer Relations</h3>
       <div class="grid-two">
