--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <form action="home.html" method="get">
       <div class="field">
         <label for="email">Email address or username</label>
-        <input id="email" name="email" type="text" required />
+        <input id="email" name="email" type="text" />
       </div>
       <div class="field">
         <label for="password">Password</label>
-        <input id="password" name="password" type="password" required />
+        <input id="password" name="password" type="password" />
       </div>
       <div class="row">
         <a class="link" href="#">Forgot password?</a>
