--- a/Semester Project/index.html
+++ b/Semester Project/index.html
@@ -29,7 +29,7 @@
       </button>
     </form>
     <p class="footer">
-      Don’t you have an account?
+      Don't have an account?
       <a href="#">Sign Up</a>
     </p>
   </main>
