--- a/Semester Project/drivers.html
+++ b/Semester Project/drivers.html
@@ -14,7 +14,7 @@
       <form class="toolbar" action="#" method="get" novalidate>
         <div class="form-row compact">
           <label for="q">Search</label>
-          <input id="q" name="q" type="text" placeholder="Name, phone, vehicle…" />
+          <input type="text" placeholder="Name, phone, vehicle…" />
         </div>
         <button type="submit" class="btn-ghost" aria-label="Apply filters">Apply</button>
       </form>
