--- a/Semester Project/drivers.html
+++ b/Semester Project/drivers.html
@@ -72,6 +72,19 @@
               <td>Truck-15</td>
               <td>DJ68LKGP</td>
             </tr>
+            <tr>
+              <td>
+                <div class="driver-cell">
+                  <div>
+                    <div class="name">Jarod Labuschagne</div>
+                  </div>
+                </div>
+              </td>
+              <td><a class="link" href="076 333 3914">076 333 3914</a></td>
+              <td><a class="link" href="jarodl16@gmail.com">jarodl16@gmail.com</a></td>
+              <td>Truck-09</td>
+              <td>DN42FJGP</td>
+            </tr>
           </tbody>
         </table>
       </div>
