Simplified (Removed Bold)

--- a/Semester Project/drivers.html
+++ b/Semester Project/drivers.html
@@ -37,12 +37,12 @@
               <td>
                 <div class="driver-cell">
                   <div>
-                    <div class="name">Alexander Michael</div>
+                    <div>Alexander Michael</div>
                   </div>
                 </div>
               </td>
-              <td><a class="link" href="079 427 5345">079 427 5345</a></td>
-              <td><a class="link" href="alex.2003michael@gmail.com">alex.2003michael@gmail.com</a></td>
+              <td>079 427 5345</td>
+              <td>alex.2003michael@gmail.com</td>
               <td>Truck-06</td>
               <td>CZ37FYGP</td>
             </tr>
@@ -50,12 +50,12 @@
               <td>
                 <div class="driver-cell">
                   <div>
-                    <div class="name">Dimitri Ladas</div>
+                    <div>Dimitri Ladas</div>
                   </div>
                 </div>
               </td>
-              <td><a class="link" href="081 077 3537">081 077 3537</a></td>
-              <td><a class="link" href="dladas68@gmail.com">dladas68@gmail.com</a></td>
+              <td>081 077 3537</td>
+              <td>dladas68@gmail.com</td>
               <td>Truck-12</td>
               <td>XW42TYGP</td>
             </tr>
@@ -63,12 +63,12 @@
               <td>
                 <div class="driver-cell">
                   <div>
-                    <div class="name">Leandro Pimentel</div>
+                    <div>Leandro Pimentel</div>
                   </div>
                 </div>
               </td>
-              <td><a class="link" href="060 526 2335">060 526 2335</a></td>
-              <td><a class="link" href="leandro12@gmail.com">leandro12@gmail.com</a></td>
+              <td>060 526 2335</td>
+              <td>leandro12@gmail.com</td>
               <td>Truck-15</td>
               <td>DJ68LKGP</td>
             </tr>
@@ -76,12 +76,12 @@
               <td>
                 <div class="driver-cell">
                   <div>
-                    <div class="name">Jarod Labuschagne</div>
+                    <div>Jarod Labuschagne</div>
                   </div>
                 </div>
               </td>
-              <td><a class="link" href="076 333 3914">076 333 3914</a></td>
-              <td><a class="link" href="jarodl16@gmail.com">jarodl16@gmail.com</a></td>
+              <td>076 333 3914</td>
+              <td>jarodl16@gmail.com</td>
               <td>Truck-09</td>
               <td>DN42FJGP</td>
             </tr>
