minor styling changes

--- a/Semester Project/drivers.html
+++ b/Semester Project/drivers.html
@@ -14,9 +14,9 @@
       <form class="toolbar" action="#" method="get" novalidate>
         <div class="form-row compact">
           <label for="q">Search</label>
-          <input type="text" placeholder="Name, Phone Number, Assigned Vehicle" />
+          <input type="text" placeholder="Driver, Phone Number, Assigned Vehicle" />
         </div>
-        <button type="submit" class="btn-ghost" aria-label="Apply filters">Apply</button>
+        <button type="submit" class="apply-button" aria-label="Apply filters">Apply</button>
       </form>
     </section>
 
@@ -27,7 +27,6 @@
             <tr>
               <th scope="col">Driver</th>
               <th scope="col">Phone Number</th>
-              <th scope="col">Email Address</th>
               <th scope="col">Assigned Vehicle</th>
               <th scope="col">Number Plate</th>
             </tr>
@@ -42,7 +41,6 @@
                 </div>
               </td>
               <td>079 427 5345</td>
-              <td>alex.2003michael@gmail.com</td>
               <td>Truck-06</td>
               <td>CZ37FYGP</td>
             </tr>
@@ -55,7 +53,6 @@
                 </div>
               </td>
               <td>081 077 3537</td>
-              <td>dladas68@gmail.com</td>
               <td>Truck-12</td>
               <td>XW42TYGP</td>
             </tr>
@@ -68,7 +65,6 @@
                 </div>
               </td>
               <td>060 526 2335</td>
-              <td>leandro12@gmail.com</td>
               <td>Truck-15</td>
               <td>DJ68LKGP</td>
             </tr>
@@ -81,7 +77,6 @@
                 </div>
               </td>
               <td>076 333 3914</td>
-              <td>jarodl16@gmail.com</td>
               <td>Truck-09</td>
               <td>DN42FJGP</td>
             </tr>
