--- a/Semester Project/drivers.html
+++ b/Semester Project/drivers.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Driver Contact Details</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
       <h3>Driver Contact Details</h3>
       <form class="toolbar" action="#" method="get" novalidate>
         <div class="form-row compact">
-          <label for="q">Search</label>
+          <label for="q"><i class="bi bi-search"></i> Search</label>
           <input type="text" placeholder="Driver, Phone Number, Assigned Vehicle" />
         </div>
         <button type="submit" class="apply-button" aria-label="Apply filters">Apply</button>
@@ -25,10 +26,10 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">Driver</th>
-              <th scope="col">Phone Number</th>
-              <th scope="col">Assigned Vehicle</th>
-              <th scope="col">Number Plate</th>
+              <th scope="col"><i class="bi bi-person"></i> Driver</th>
+              <th scope="col"><i class="bi bi-phone"></i> Phone Number</th>
+              <th scope="col"><i class="bi bi-truck"></i> Assigned Vehicle</th>
+              <th scope="col"><i class="bi bi-hash"></i>Number Plate</th>
             </tr>
           </thead>
           <tbody>
@@ -86,7 +87,11 @@
     </section>
 
     <section class="card">
-      <p><a class="link" href="home.html">Back to Dashboard</a></p>
+      <p>
+        <a class="link" href="home.html">
+          <i class="bi bi-arrow-left-circle"></i> Back to Dashboard
+        </a>
+      </p>
     </section>
 
   </main>
