--- a/Semester Project/home.html
+++ b/Semester Project/home.html
@@ -4,21 +4,37 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home Dashboard</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <main class="dashboard">
 
-  <section class="card dropdown">
-  <details>
-    <summary>Company Information</summary>
-    <ul class="checklist">
-      <li><a href="vehicle.html"><span>Vehicle Specific Dashboard</span></a></li>
-      <li><a href="drivers.html"><span>Driver Contact Details</span></a></li>
-      <li><a href="history.html"><span>History</span></a></li>
-    </ul>
-  </details>
-  </section>
+    <section class="card dropdown">
+      <details>
+        <summary>Company Information</summary>
+        <ul class="checklist">
+          <li>
+            <a href="vehicle.html">
+              <i class="bi bi-truck"></i>
+              <span>Vehicle Specific Dashboard</span>
+            </a>
+          </li>
+          <li>
+            <a href="drivers.html">
+              <i class="bi bi-person-lines-fill"></i>
+              <span>Driver Contact Details</span>
+            </a>
+          </li>
+          <li>
+            <a href="history.html">
+              <i class="bi bi-clock-history"></i>
+              <span>History</span>
+            </a>
+          </li>
+        </ul>
+      </details>
+    </section>
 
     <section class="grid-two">
       <div class="card highlight">
@@ -92,7 +108,12 @@
     </section>
 
     <section class="card">
-      <h3><a href="index.html">Sign Out</a></h3>
+      <h3>
+        <a href="index.html">
+          <i class="bi bi-box-arrow-right"></i>
+          <span>Sign Out</span>
+        </a>
+      </h3>
     </section>
 
   </main>
