--- a/Semester Project/drivers.html
+++ b/Semester Project/drivers.html
@@ -27,7 +27,7 @@
           <thead>
             <tr>
               <th scope="col"><i class="bi bi-person"></i> Driver</th>
-              <th scope="col"><i class="bi bi-phone"></i> Phone Number</th>
+              <th scope="col"><i class="bi bi-telephone"></i> Phone Number</th>
               <th scope="col"><i class="bi bi-truck"></i> Assigned Vehicle</th>
               <th scope="col"><i class="bi bi-hash"></i>Number Plate</th>
             </tr>
@@ -89,7 +89,7 @@
     <section class="card">
       <p>
         <a class="link" href="home.html">
-          <i class="bi bi-arrow-left-circle"></i> Back to Dashboard
+          <i class="bi bi-arrow-left"></i> Back to Dashboard
         </a>
       </p>
     </section>
