Changed look of progress bar

--- a/Semester Project/home.html
+++ b/Semester Project/home.html
@@ -61,7 +61,10 @@
 
         <p>Daily Order Completion:</p>
         <div class="progress">
-          <div></div><div></div><div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
       </div>
     </section>
