--- a/Semester Project/home.html
+++ b/Semester Project/home.html
@@ -38,10 +38,11 @@
 
     <section class="grid-two">
       <div class="card highlight">
-        <h3>Overall Vehicle Capacity Utilization (%)</h3>
+        <h3><i class="bi bi-bar-chart"></i> Overall Vehicle Capacity Utilization</h3>
+        <div class="pie-chart"></div>
       </div>
       <div class="card">
-        <h3>Live Logistics Tracking</h3>
+        <h3><i class="bi bi-truck"></i> Live Logistics Tracking</h3>
         <div class="form-row">
           <label for="avgDelay">Average Delay Time:</label>
           <input id="avgDelay" type="text" />
@@ -70,18 +71,18 @@
     </section>
 
     <section class="card highlight">
-      <h3>Order Management</h3>
+      <h3><i class="bi bi-box-seam"></i> Order Management</h3>
       <div class="grid-three">
         <div class="form-row">
           <label for="onTime">On-Time Deliveries (%):</label>
           <input id="onTime" type="text" />
         </div>
         <div class="form-row">
-          <label for="backlogs">Backlogs (%):</label>
+          <label for="backlogs">On-Time Dispatch (%):</label>
           <input id="backlogs" type="text" />
         </div>
         <div class="form-row">
-          <label for="rejected">Rejected Orders:</label>
+          <label for="rejected">Backlogs (%):</label>
           <input id="rejected" type="text" />
         </div>
         <div class="form-row">
@@ -89,18 +90,18 @@
           <input id="orderAcc" type="text" />
         </div>
         <div class="form-row">
-          <label for="avgReturn">Average Return:</label>
+          <label for="avgReturn">Average Return Per Order:</label>
           <input id="avgReturn" type="text" />
         </div>
         <div class="form-row">
-          <label for="dispatch">On-Time Dispatch (%):</label>
+          <label for="dispatch">Rejected Orders:</label>
           <input id="dispatch" type="text" />
         </div>
       </div>
     </section>
 
     <section class="card">
-      <h3>Customer Relations</h3>
+      <h3><i class="bi bi-people"></i> Customer Relations</h3>
       <div class="grid-two">
         <textarea placeholder="Queries and Complaints"></textarea>
         <div class="satisfaction">
