minor wording chnages

--- a/Semester Project/home.html
+++ b/Semester Project/home.html
@@ -90,11 +90,11 @@
           <input id="orderAcc" type="text" />
         </div>
         <div class="form-row">
-          <label for="avgReturn">Average Return Per Order:</label>
+          <label for="avgReturn">Average Returns per Order:</label>
           <input id="avgReturn" type="text" />
         </div>
         <div class="form-row">
-          <label for="dispatch">Rejected Orders:</label>
+          <label for="dispatch">Number of Rejected Orders:</label>
           <input id="dispatch" type="text" />
         </div>
       </div>
