Fix history page

--- a/Semester Project/history.html
+++ b/Semester Project/history.html
@@ -9,12 +9,23 @@
 </head>
 <body>
   <main class="dashboard">
+<section class="card highlight">
+      <details>
+        <summary>Company History information</summary>
+      
+      </details>
+    </section>
+
+
+
+
     <section class="grid-two">
       <div class="card highlight">
-        <h3>Vehicle History Overview</h3>
+        <h3><i class="bi bi-bar-chart"></i>Vehicle Utilisation History</h3>
+        <div class="pie-chart"></div>
       </div>
       <div class="card">
-        <h3>Driver Performance History</h3>
+        <h3><i class="bi bi-truck"></i>Logistics Tracking History</h3>
         <div class="form-row">
           <label for="avgDelay">Average Delay Time:</label>
           <input id="avgDelay" type="text" />
@@ -32,15 +43,11 @@
           <input id="billingAcc" type="text" />
         </div>
 
-        <p>Daily Completion Status:</p>
-        <div class="progress">
-          <div></div><div></div><div></div>
-        </div>
-      </div>
+       
     </section>
 
     <section class="card highlight">
-      <h3>Order History</h3>
+      <h3><i class="bi bi-box-seam"></i>Order Management History</h3>
       <div class="grid-three">
         <div class="form-row">
           <label for="onTime">On-Time Orders (%):</label>
@@ -70,7 +77,7 @@
     </section>
 
     <section class="card">
-      <h3>Customer Feedback History</h3>
+      <h3><i class="bi bi-people"></i>Customer Feedback History</h3>
       <div class="grid-two">
         <textarea placeholder="Customer Queries and Complaints"></textarea>
         <div class="satisfaction">
@@ -90,4 +97,4 @@
 
   </main>
 </body>
-</html>
+</html> 
