--- a/Semester Project/history.html
+++ b/Semester Project/history.html
@@ -9,23 +9,18 @@
 </head>
 <body>
   <main class="dashboard">
-<section class="card highlight">
-      <details>
-        <summary>Company History information</summary>
-      
-      </details>
+
+    <section class="card highlight">
+      <h3>Company History information</h3>
     </section>
-
-
-
 
     <section class="grid-two">
       <div class="card highlight">
-        <h3><i class="bi bi-bar-chart"></i>Vehicle Utilisation History</h3>
-        <div class="pie-chart"></div>
+        <h3><i class="bi bi-bar-chart"></i> Vehicle Utilisation History</h3>
+        <div class="pie-chart-vehicle"></div>
       </div>
       <div class="card">
-        <h3><i class="bi bi-truck"></i>Logistics Tracking History</h3>
+        <h3><i class="bi bi-truck"></i> Logistics Tracking History</h3>
         <div class="form-row">
           <label for="avgDelay">Average Delay Time:</label>
           <input id="avgDelay" type="text" />
@@ -42,12 +37,10 @@
           <label for="billingAcc">Performance Accuracy (%):</label>
           <input id="billingAcc" type="text" />
         </div>
-
-       
     </section>
 
     <section class="card highlight">
-      <h3><i class="bi bi-box-seam"></i>Order Management History</h3>
+      <h3><i class="bi bi-box-seam"></i> Order Management History</h3>
       <div class="grid-three">
         <div class="form-row">
           <label for="onTime">On-Time Orders (%):</label>
@@ -77,7 +70,7 @@
     </section>
 
     <section class="card">
-      <h3><i class="bi bi-people"></i>Customer Feedback History</h3>
+      <h3><i class="bi bi-people"></i> Customer Feedback History</h3>
       <div class="grid-two">
         <textarea placeholder="Customer Queries and Complaints"></textarea>
         <div class="satisfaction">
@@ -90,7 +83,7 @@
     <section class="card">
       <p>
         <a class="link" href="home.html">
-          <i class="bi bi-arrow-left-circle"></i> Back to Dashboard
+          <i class="bi bi-arrow-left"></i> Back to Dashboard
         </a>
       </p>
     </section>
