done majority of vehicle page

--- a/Semester Project/vehicle.html
+++ b/Semester Project/vehicle.html
@@ -14,9 +14,45 @@
       <h3>Vehicle Specific Information</h3>
     </section>
 
-    <section>
-        
+    
+    <section class="grid-two">
+      <div class="card highlight">
+        <h3><i class="bi bi-bar-chart"></i> Individual Vehicle Capacity Utilization</h3>
+        <div class="pie-chart-vehicle"></div>
+      </div>
+      <div class="card">
+        <h3><i class="bi bi-tools"></i> Vehicle Maintenance</h3>
+        <div class="form-row">
+          <label for="avgDelay">Distance Travelled (km):</label>
+          <input id="avgDelay" type="text" />
+        </div>
+        <div class="form-row">
+          <label for="avgIdle">Date of Next Serivce:</label>
+          <input id="avgIdle" type="text" />
+        </div>
+        <div class="form-row">
+          <label for="numOrders">Number of Services:</label>
+          <input id="numOrders" type="text" />
+        </div>
+
+    <section class="card">
+      <h3><i class="bi bi-file-earmark-text"></i> Service Details</h3>
+      <div class="grid-one">
+        <textarea placeholder="Service 1: Enter description here"></textarea>
+      </div>
     </section>
+
+    </section>
+
+    <section class="card">
+      <h3><i class="bi bi-broadcast"></i> Live Vehicle Tracker</h3>
+      <div class="grid-one">
+    </section>
+
+    <section class="card">
+    <h3><i class="bi bi-clock"></i> Expected Time to Complete Current Delivery</h3>
+    </section>
+
 
     <section class="card">
       <p>
