completed vehicle page

--- a/Semester Project/drivers.html
+++ b/Semester Project/drivers.html
@@ -87,11 +87,12 @@
     </section>
 
     <section class="card">
-      <p>
-        <a class="link" href="home.html">
-          <i class="bi bi-arrow-left"></i> Back to Dashboard
+      <h4>
+        <a href="home.html">
+          <i class="bi bi-arrow-left"></i>
+          <span>Back to dashboard</span>
         </a>
-      </p>
+      </h4>
     </section>
 
   </main>
