--- a/Semester Project/history.html
+++ b/Semester Project/history.html
@@ -11,7 +11,7 @@
   <main class="dashboard">
 
     <section class="card highlight">
-      <h3>Company History information</h3>
+      <h4>Company History information</h4>
     </section>
 
     <section class="grid-two">
@@ -81,11 +81,12 @@
     </section>
 
     <section class="card">
-      <p>
-        <a class="link" href="home.html">
-          <i class="bi bi-arrow-left"></i> Back to Dashboard
+      <h4>
+        <a href="home.html">
+          <i class="bi bi-arrow-left"></i>
+          <span>Back to dashboard</span>
         </a>
-      </p>
+      </h4>
     </section>
 
   </main>
