--- a/Semester Project/vehicle.html
+++ b/Semester Project/vehicle.html
@@ -11,7 +11,7 @@
   <main class="dashboard">
 
     <section class="card highlight">
-      <h3>Vehicle Specific Information</h3>
+      <h4>Vehicle Specific Information</h4>
     </section>
 
     
@@ -45,21 +45,27 @@
     </section>
 
     <section class="card">
-      <h3><i class="bi bi-broadcast"></i> Live Vehicle Tracker</h3>
+      <h5><i class="bi bi-broadcast"></i> Live Vehicle Tracker</h5>
       <div class="grid-one">
+        <img src="https://img-ik.cars.co.za/news-site-za/images/2019/12/3_-Jaguar-Powerway-live-map.jpg?tr=w-800" 
+            alt="South Africa Map" class="map-image">
+      </div>
     </section>
 
     <section class="card">
     <h3><i class="bi bi-clock"></i> Expected Time to Complete Current Delivery</h3>
+    <div>
+      <input type="text">
+    </div>
     </section>
 
-
     <section class="card">
-      <p>
-        <a class="link" href="home.html">
-          <i class="bi bi-arrow-left"></i> Back to Dashboard
+      <h4>
+        <a href="home.html">
+          <i class="bi bi-arrow-left"></i>
+          <span>Back to dashboard</span>
         </a>
-      </p>
+      </h4>
     </section>
 
   </main>
