--- a/Semester Project/history.html
+++ b/Semester Project/history.html
@@ -17,7 +17,7 @@
     <section class="grid-two">
       <div class="card highlight">
         <h3><i class="bi bi-bar-chart"></i> Vehicle Utilisation History</h3>
-        <div class="pie-chart-vehicle"></div>
+        <div class="pie-chart-history"></div>
       </div>
       <div class="card">
         <h3><i class="bi bi-truck"></i> Logistics Tracking History</h3>
@@ -75,7 +75,7 @@
         <textarea placeholder="Customer Queries and Complaints"></textarea>
         <div class="satisfaction">
           <p>Overall Satisfaction Score</p>
-          <input type="text" />
+          <input type="text"/>
         </div>
       </div>
     </section>
