--- a/Semester Project/vehicle.html
+++ b/Semester Project/vehicle.html
@@ -12,6 +12,13 @@
 
     <section class="card highlight">
       <h4>Vehicle Specific Information</h4>
+      <form class="toolbar" action="#" method="get" novalidate>
+        <div class="form-row compact">
+          <label for="q"><i class="bi bi-search"></i> Search</label>
+          <input type="text" placeholder="Vehicle" />
+        </div>
+        <button type="submit" class="apply-button" aria-label="Apply filters">Apply</button>
+      </form>
     </section>
 
     
@@ -28,11 +35,11 @@
         </div>
         <div class="form-row">
           <label for="avgIdle">Date of Next Serivce:</label>
-          <input id="avgIdle" type="text" />
+          <input id="avgIdle" type="text"/>
         </div>
         <div class="form-row">
           <label for="numOrders">Number of Services:</label>
-          <input id="numOrders" type="text" />
+          <input id="numOrders" type="text"/>
         </div>
 
     <section class="card">
