--- a/Semester Project/vehicle.html
+++ b/Semester Project/vehicle.html
@@ -30,7 +30,7 @@
       <div class="card">
         <h3><i class="bi bi-tools"></i> Vehicle Maintenance</h3>
         <div class="form-row">
-          <label for="avgDelay">Distance Travelled (km):</label>
+          <label for="avgDelay">Mileage (km):</label>
           <input id="avgDelay" type="text" />
         </div>
         <div class="form-row">
