--- a/Semester Project/vehicle.html
+++ b/Semester Project/vehicle.html
@@ -30,16 +30,16 @@
       <div class="card">
         <h3><i class="bi bi-tools"></i> Vehicle Maintenance</h3>
         <div class="form-row">
-          <label for="avgDelay">Mileage (km):</label>
-          <input id="avgDelay" type="text" />
+          <label for="Mileage">Mileage (km):</label>
+          <input id="Mileage" type="text" />
         </div>
         <div class="form-row">
-          <label for="avgIdle">Date of Next Serivce:</label>
-          <input id="avgIdle" type="text"/>
+          <label for="dateNextService">Date of Next Serivce:</label>
+          <input id="dateNextService" type="text"/>
         </div>
         <div class="form-row">
-          <label for="numOrders">Number of Services:</label>
-          <input id="numOrders" type="text"/>
+          <label for="numServices">Number of Services:</label>
+          <input id="numServices" type="text"/>
         </div>
 
     <section class="card">
