--- a/Semester Project/history.html
+++ b/Semester Project/history.html
@@ -6,6 +6,7 @@
   <title>History Dashboard</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="2ndmain.css">
 </head>
 <body>
   <main class="dashboard">
