--- a/Semester Project/history.html
+++ b/Semester Project/history.html
@@ -12,7 +12,7 @@
   <main class="dashboard">
 
     <section class="card highlight">
-      <h4>Company History information</h4>
+      <h4>Company History</h4>
     </section>
 
     <section class="grid-two">
@@ -32,7 +32,7 @@
       <input id="avgIdle" type="text" />
     </div>
     <div class="form-row">
-      <label for="numOrders">Number of Trips:</label>
+      <label for="numOrders">Number of Orders Completed:</label>
       <input id="numOrders" type="text" />
     </div>
     <div class="form-row">
