--- a/Semester Project/history.html
+++ b/Semester Project/history.html
@@ -21,7 +21,7 @@
     <div class="pie-chart-history"></div>
   </div>
 
-  <div class="card">
+  <div class="card logistics-card">
     <h3><i class="bi bi-truck"></i> Logistics Tracking History</h3>
     <div class="form-row">
       <label for="avgDelay">Average Delay Time:</label>
