--- a/Semester Project/index.html
+++ b/Semester Project/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
   <main class="wrap">
-    <h1>Sign in</h1>
+    <h1>Sign In</h1>
     <form action="home.html" method="get">
       <div class="field">
-        <label for="email">Email address or username</label>
-        <input id="email" name="email" type="text" />
+        <label for="username">Username</label>
+        <input id="username" name="username" type="text" required/>
       </div>
       <div class="field">
         <label for="password">Password</label>
-        <input id="password" name="password" type="password" />
+        <input id="password" name="password" type="password" required/>
       </div>
       <div class="row">
-        <a class="link" href="#">Forgot password?</a>
+        <a class="link" href="#">Forgot Password?</a>
       </div>
       <button type="submit" class="btn-primary">Sign in</button>
       <div class="or">or</div>
