--- a/Semester Project/index.html
+++ b/Semester Project/index.html
@@ -12,11 +12,11 @@
     <form action="home.html" method="get">
       <div class="field">
         <label for="username">Username</label>
-        <input id="username" name="username" type="text" required/>
+        <input id="username" name="username" type="text"/>
       </div>
       <div class="field">
         <label for="password">Password</label>
-        <input id="password" name="password" type="password" required/>
+        <input id="password" name="password" type="password"/>
       </div>
       <div class="row">
         <a class="link" href="#">Forgot Password?</a>
