Edits ( Changed background and added percentages to pie chart)

--- a/Semester Project/history.html
+++ b/Semester Project/history.html
@@ -18,7 +18,9 @@
     <section class="grid-two">
   <div class="card highlight">
     <h3><i class="bi bi-bar-chart"></i> Vehicle Utilisation History</h3>
-    <div class="pie-chart-history"></div>
+    <div class="pie-chart-history">
+      <div class="pie-label-history">88%</div>
+    </div>
   </div>
 
   <div class="card logistics-card">
