--- a/Semester Project/home.html
+++ b/Semester Project/home.html
@@ -39,7 +39,9 @@
     <section class="grid-two">
       <div class="card highlight">
         <h3><i class="bi bi-bar-chart"></i> Overall Vehicle Capacity Utilization</h3>
-        <div class="pie-chart"></div>
+        <div class="pie-chart">
+          <div class="pie-label">65%</div>
+        </div>
       </div>
       <div class="card">
         <h3><i class="bi bi-truck"></i> Live Logistics Tracking</h3>
