--- a/Semester Project/vehicle.html
+++ b/Semester Project/vehicle.html
@@ -25,7 +25,9 @@
     <section class="grid-two">
       <div class="card highlight">
         <h3><i class="bi bi-bar-chart"></i> Individual Vehicle Capacity Utilization</h3>
-        <div class="pie-chart-vehicle"></div>
+        <div class="pie-chart-vehicle">
+          <div class="pie-label-vehicle">95%</div>
+        </div>
       </div>
       <div class="card">
         <h3><i class="bi bi-tools"></i> Vehicle Maintenance</h3>
